--- a/query-parametrization/build.gradle
+++ b/query-parametrization/build.gradle
@@ -8,6 +8,6 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
     compileOnly "org.mapstruct:mapstruct:$mapstructVersion"
 
-    implementation project(path: ':crud-lib')
+    implementation project(path: ':starters:innowise-data-starter')
     implementation project(path: ':core-lib')
 }
